test/error/0002-redefinition4.c
/*
PATTERN: x
*/

struct x {
	int x;
	int y;
	struct {
		int x;
	};
};
